# mini-twitter-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  twitter_settings
src/: build.rs  config.rs  main.rs  ui.rs  util.rs
src/config/: config.rs  keys
src/test/: test.rs
src/ui/: ui.rs
src/util/: misc.rs  mod.rs  tweet.rs  user.rs
