[package]
name = "twitter-tui"
version = "0.1.0"
authors = ["Ryan Burke <ryanburketv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
egg-mode = { version = "0.15", features = ["rustls"], default-features = false }
yansi = "0.5.0"
chrono = "0.4"
tui = "0.12"
termion = "1.5"
term_size = "0.3.2"
rand = "0.7.3"